# html2docx

./: .gitignore  LICENSE  README.md  h2d.py  parser.py  pyproject.toml  requirements.txt  table.html  test.py  test_tables.py  text1.html
.github/workflows/: python-app.yml
htmldocx/: __init__.py  h2d.py
tests/: code.html  context.py  tables1.html  tables2.html  tables3.html  test.py  test_code.py  test_tables.py  test_tables_cell_merging.py  text1.html
