[project]
name = "html3docx"
version = "0.0.7"
authors = [
  {name="John Jordan"},
]
description = "A fork of https://github.com/pqzx/html2docx.  This version will focus on expedient changes for my particular use case.  I may contribute ideas back to the main version, but it sees to be mostly dead."

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/johnjor/html2docx"