[project]
name = "html3docx"
version = "0.0.8"
authors = [
  {name="John Jordan"},
]
description = "A fork of https://github.com/pqzx/html2docx.  This version will focus on expedient changes for our particular use case."
readme = "README.md"
license = {file = "LICENSE"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/johnjor/html2docx"